--- a/views/boilerplate.ejs
+++ b/views/boilerplate.ejs
@@ -8,27 +8,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="nav">
-        <div class="nav-container">
-            <ul class="ul-nav">
-                <a href="/airBNB" style="text-decoration: none;"><li class="title" >airBNB</li></a>
-                <form action="/search" method="post" style="position: absolute; margin-top:0.5%;" class="offset-4"> <input type="text" name="searchQ" placeholder="Search Destination" style="width: 55%;height: 25%;"/>
-                  <button style="width: 30%;height: 25%;">Search</button></form>
-               
-                <a href="/airBNB/add" class="offset-8" style="text-decoration: none;"><li>Add Your home</li></a>
-                <span class="ms-auto">
-             <% if(!userReq){%>
-                <a href="/login" style="font-size: 18px;margin-left:-50%;text-decoration: none;color: wheat;">Login</a>
-                &nbsp;
-                <a href="/signup" style="font-size: 18px;text-decoration: none;color: wheat;">SignUp</a>
-            <% }  %>    
-            <%if(userReq){%>
-                <a href="/logout" style="font-size: 18px;text-decoration: none;color: wheat;">Logout</a>
-            <%}%>
-           
-            </span>
-            </ul>
-            
+    <div class="main-nav">
+        <div class="nav-logo">
+            <h3><a href="/airBNB">airBNB</a></h3>
+            <div class="nav-element">
+                <h5><a href="/airBNB/add">Add</a></h5>
+                <% if(!userReq){%>
+                <h5><a href="/login">LogIn</a></h5>
+                <h5><a href="/signup">SingIn</a></h5>
+                <% }  %>
+                <%if(userReq){%>
+                <h5><a href="/logout">LogOut</a></h5>
+                <%}%>
+            </div>
         </div>
     </div>
     <%-include("./flash.ejs")%>
